font fix on mobile

--- a/src/app/components/timer/timer-mobile.component.scss
+++ b/src/app/components/timer/timer-mobile.component.scss
@@ -4,7 +4,7 @@
       line-height: 80vh;
       text-align: center;
       font-family: D7CMB;
-      font-size: 9vh;
+      font-size: 8vh;
     }
   }
   
